--- a/index2.html
+++ b/index2.html
@@ -10,4 +10,12 @@
       rel="stylesheet"
     />
   </head>
+  <main class="row">
+    <header class="col-12"></header>
+    <nav class="navbar col-12"></nav>
+    <aside class="col-md-2"></aside>
+    <article class="col-md-8"></article>
+    <aside class="col-md-2"></aside>
+    <footer class="col-12"></footer>
+  </main>
   
