--- a/index.html
+++ b/index.html
@@ -10,4 +10,16 @@
       rel="stylesheet"
     />
   </head>
+  <body>
+    <main class="container-fluid col-12">
+        <header>Webáruház</header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <a href="" class="">vami</a>
+        </nav>
+        <aside class="col-md-4"></aside>
+        <article class="col-md-12"></article>
+        <aside class="col-md-4"></aside>
+        <footer></footer>
+    </main>
+  </body>
   
